# fw13-touchpad-bridge

./: README.md
TouchpadAdapter/: TouchpadAdapter.kicad_pcb  TouchpadAdapter.kicad_prl
TouchpadAdapter/lib/fp.pretty/: EVQP7C01P.kicad_mod  TestPoint_Pad_D0.5mm.kicad_mod
TouchpadAdapter/lib/sym/: EVQP7C01P.kicad_sym  FH26W-51S-0.3SHW60.kicad_sym
fabrication/: TouchpadAdapter_BOM_DigiKey.csv
firmware/touchpad-bridge/: CMakeLists.txt  README.md  tusb_config.h
firmware/touchpad-bridge/include/: config.h  i2c_hid.h  status.h  touchpad.h
firmware/touchpad-bridge/src/: i2c_hid.c  main.c  status.c  touchpad.c  usb_descriptors.c  usb_hid.c
hardware/TouchpadAdapter/: TouchpadAdapter.kicad_pro  TouchpadAdapter.kicad_sch  fp-lib-table  sym-lib-table
hardware/TouchpadAdapter/lib/fp.pretty/: FH26W-51S-0.3SHW60.kicad_mod  QFN-60-1EP_7x7mm_P0.4mm_EP3.4x3.4mm.kicad_mod  USB4520-03-0-A.kicad_mod
hardware/TouchpadAdapter/lib/mdl/: USB4520-03-1-A.STEP
hardware/TouchpadAdapter/lib/sym/: touchpad_adapter.bak  touchpad_adapter.kicad_sym
